Entrega 3: Ajuste para guardar tarjetas de debito y para realizar consumos
