# src/main/java/com/nttdata/creditproducts/service/model/TransactionDTO.java
@@ -10,6 +10,7 @@ import java.time.LocalDate;
 @Document(collection = "transactions")
 public class TransactionDTO {
     private String customerId;
+    private String cardNumber;
     private String dni;
     private Double amount;
     private LocalDate transactionDate;
